--- a/PreparationProg/PreparationProg.csproj
+++ b/PreparationProg/PreparationProg.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Var15\" />
+    <Folder Include="Var19\" />
+  </ItemGroup>
+
 </Project>
